--- a/AI-ML-Projects/smartCart.ipynb
+++ b/AI-ML-Projects/smartCart.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": null,
    "id": "282fb706-ba5e-48ad-a9f0-6589b633d9f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns #"
    ]
   },
   {
